<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".kaba.activity.MainActivity">

    <TextView
        android:id="@+id/mobile_App_Id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_App_Id"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/ble_registration_device_Id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ble_registration_device_Id"
        android:textSize="15sp" />

    <Button
        android:id="@+id/complete_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="unregister"
        android:text="@string/unregister" />

    <Button
        android:id="@+id/sync_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="synchronise"
        android:text="@string/synchronise" />

    <Button
        android:id="@+id/get_all_files_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="getAllFiles"
        android:text="@string/get_all_files" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/text_file_index"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Index"
            android:inputType="number" />

        <Button
            android:id="@+id/activate_file_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:onClick="activateFile"
            android:text="@string/activate_file" />

        <Button
            android:id="@+id/deactivate_all_files_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:onClick="deactivateAllFiles"
            android:text="@string/deactivate_all_files" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ble_status_str"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/ble_status_msg"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="end"
            android:onClick="clearLog"
            android:text="@string/clear"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/log_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/scroll_view_border">

        <LinearLayout
            android:id="@+id/log_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

</LinearLayout>
